# triangle

./: CMakeLists.txt  main.cpp
assets/shader/: triangle.vert
src/core/: Application.cpp  Application.h  Window.cpp  Window.h
src/graphics/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexAttribute.h  VertexBuffer.cpp  VertexBuffer.h
src/input/: InputHandler.cpp  InputHandler.h
src/math/: Mat4.h  Transform.h  Vec3.h
src/scene/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  SceneObject.cpp  SceneObject.h
src/scene/geometry/: Geometry.h  Pyramid.h  Sphere.h
